# SentenceMiner

./: .gitignore  AGENTS.md  LICENSE  README.md  SentenceMiner_Spec.md  bug.md  dev_server.py
legacy-root/: Cargo.toml  tauri.conf.json
legacy-root/src/: config.rs  main.rs
legacy-root/src/anki/: client.rs
legacy-root/src/api/: translation.rs
legacy-root/src/capture/: mod.rs  ocr.rs  selection.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: config.rs  lib.rs  main.rs  shortcut.rs
src-tauri/src/anki/: client.rs
src-tauri/src/api/: mod.rs  prompts.rs  response_parser.rs  translation.rs
src-tauri/src/api/prompts/: avancado.txt  iniciante.txt  intermediario.txt
src-tauri/src/capture/: ocr.rs  selection.rs
src-tauri/tests/: config_tests.rs
ui/: card.js  index.html  main.js  overlay.css  overlay.html  overlay.js  style.css  tauri-api.js  ui-state.js
