[package]
name = "sentenceminer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Capture
arboard = "3"

# OCR
leptess = "0.5"
screenshots = "0.8"
image = "0.25"

# Hotkey
# global-hotkey = "0.5" # to be wired in later phases via Tauri plugin

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
